# fridai-backend

./: .gitignore  Dockerfile  Makefile  README.md  bootstrap.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
app/: db.py  dependencies.py  exceptions.py  main.py  models.py  schemas.py  settings.py
app/ai/: placeholder.py
app/routers/: attachments.py  categories.py  config.py  notifications.py  relationships.py  tags.py  tasks.py  views.py
app/services/: notifications.py  templates.py
app/utils/: datetime_converter.py  markdown.py  tz.py
tests/: conftest.py  test_attachments.py  test_categories.py  test_config.py  test_endpoints.py  test_health.py  test_models.py  test_notifications.py  test_perf.py  test_relationships.py  test_search_sqli.py  test_stress.py  test_tags.py  test_tasks.py  test_validation.py  test_views.py
