[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.20.0",
    "apprise>=1.8.0",
    "asyncpg>=0.29.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.2",
    "jinja2>=3.1.4",
    "langchain>=0.2.16",
    "pendulum>=3.1.0",
    "pydantic>=2.11.7",
    "pydantic-extra-types==2.10.5",
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.8",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.30.6",
]
