[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=23.0.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",
    "fastapi>=0.115.0",
    "filetype>=1.2.0",
    "httpx>=0.27.2",
    "jinja2>=3.1.4",
    "langchain>=0.2.16",
    "loguru>=0.7.3",
    "pendulum>=3.1.0",
    "pydantic>=2.11.7",
    "pydantic-extra-types==2.10.5",
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.8",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.30.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
